--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,10 @@
 - Bots may not camp when last in team (or second last?)
 - Bots should know when others are near its waypoint, so it won't run into each other
-- Bots should have better knowledge about goals 
+- Bots should have better knowledge about goals (mainly for invesitigating which bomb site got the live C4 in)
 - Improve pathfinder
 - Chat rate should be lower @ default
 - Improve code in overall, ugly!
-
-
-- improve the way bots walk path and decide it is a bad connection
-  - improve 'unstucking'... when not stuck by other players.
+- Allow bots to duck jump for vaulting upon crates or ledges, cs_italy and de_inferno are good examples
+- Improve the way bots walk path and decide it is a bad connection
+- improve 'unstucking'... when not stuck by other players.
   
