--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,10 @@
 - Bots may not camp when last in team (or second last?)
-- Bots should know when others are near its waypoint, so it won't run into each other
+- Bots should know when others are near its waypoint, so it won't run into each other - Done but not fully tested!
 - Bots should have better knowledge about goals (mainly for investigating which bomb site got the live C4 in)
-- Improve pathfinder by properly removing excessive connections, especially on ones that have blocked pathways
-- Allow bots to duck jump for vaulting upon crates or ledges, cs_italy, de_nuke and de_inferno are good examples
+- Improve pathfinder by properly removing excessive connections, especially on ones that have blocked pathways - Not fully tested!
+- Allow bots to duck jump for vaulting upon crates or ledges, cs_italy, de_nuke and de_inferno are good examples - Almost done!
 - Improve the way bots walk path and decide it is a bad connection
-- Improve 'unstucking'... when not stuck by other players.
+- Improve 'unstucking'... when not stuck by other players. - Almost done!
 - Allow bots to autovacate for human players
 - Prevent bots from Team Killing when a player joins T in CZ
 - Find an automated solution for removing redundant or excessive nodes that can make the connections less messy (if it doesn't already exist?)
