--- a/todo.txt
+++ b/todo.txt
@@ -10,3 +10,4 @@
 - To allow bots to really, I mean REALLY ignore nodes from VERY hard to reach places - including non-vaultable edges and tall crates
 - Find an automated solution for removing redundant or excessive nodes that can make the connections less messy (if it doesn't already exist?)
 - To add a cvar to toggle Reallog.txt on or off to reduce printing too many texts in the console and to prevent that txt file building up
+- Ensure that the RealBot personality directories are correctly assigned
